       no revisions were used. (Stefan)
- CHG: the log command now has the strict-option
       set to false instead of true. (Stefan)
- CHG: time/date is now shown using the local
       format. This solves issue 49. (Stefan)
- CHG: removed dependency to msimg32.dll. (Stefan)
- CHG: the commit dialog shows the modified files
       with path. (Stefan)
- ADD: repository browser works with svn://
       svn+ssl:// (Stefan)
- ADD: enhanced the repository browser with a
       popup-menu containing commands like
       "show log", "save as..." and "open". (Stefan)
- ADD: new menu entry to start an external merge
       program, including parameters. (Stefan)
- ADD: the "temporary file mask" can now contain
       folders (marked with a backslash at the end)
       and has a positive list (marked with a 
       plus sign "+" in front). So you are now
       able to specify something like
       "+readme.txt;*.txt;cvs\" which will allow
       the file readme.txt but deny all other *.txt
       files, and will deny all folders and files within
       a folder named "cvs". 
       Please note that the order is from left
       to right - so "*.txt;+readme.txt" will deny
       all *.txt files, the readme.txt will also
       be denied since it has lower priority than
       the *.txt match. (Stefan)
- ADD: before doing a merge TSVN checks if the
       working copy has uncommitted changes
       and shows an error message if it has. (Stefan)
- ADD: if a file has been deleted in the explorer but
       not in version control then the commit dialog
       lets the user select those files and they
       will be deleted from version control before
       the commit. (Stefan)
- ADD: better caching of subversion statuses. (Stefan)
- ADD: two new icon overlays for status "deleted"
       and for status "added". (Stefan)
- ADD: new command "relocate". (Stefan)

Version 0.11.2
- BUG: entering the settings page without
       activating the icon overlay page