@@ -1,8 +1,8 @@
-#define FILEVER_INCVERSION        0,12,0,8
-#define PRODUCTVER_INCVERSION     0,12,0,8
-#define STRFILEVER_INCVERSION     "0, 12, 0, 8\0"
-#define STRPRODUCTVER_INCVERSION  "0, 12, 0, 8\0"
+#define FILEVER_INCVERSION        0,12,0,9
+#define PRODUCTVER_INCVERSION     0,12,0,9
+#define STRFILEVER_INCVERSION     "0, 12, 0, 9\0"
+#define STRPRODUCTVER_INCVERSION  "0, 12, 0, 9\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             12
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  8
+#define TSVN_VERBUILD_INCVERSION  9
