@@ -3,7 +3,7 @@
 <h1><font color="#0000ff">TortoiseSVN FAQ</font></h1>
 </div>
 <div class="right"><font size="0">By Stefan K&uuml;ng and
-L&uuml;bbe Onken, last update 2003-06-03</font></div>
+L&uuml;bbe Onken, last update 2003-06-16</font></div>
 
 <h3>Introduction</h3>
 <br><a href="#whatistortoiseSVN">What is TortoiseSVN?</a>
@@ -185,7 +185,6 @@ you have the nice icons back.
 </tbody>
 </table>
 
-</table>
 <h4><a name="uninstallation">How do I uninstall TortoiseSVN?</a></h4>
 <table border="0" cellpadding="2" width="99%" bgcolor="white">
 <tbody>
